# mcp-forge

./: README.md  pyproject.toml
mcp_forge/: __init__.py  cli.py  generator.py  loader.py  models.py  parser.py
mcp_forge/templates/node/: package.json.j2  server.js.j2  tools.js.j2
mcp_forge/templates/python/: requirements.txt.j2  server.py.j2  tools.py.j2
tests/: __init__.py  test_generator.py  test_loader.py  test_models.py  test_parser.py  test_scaffold.py
tests/fixtures/: petstore.yaml
